--- a/config.env
+++ b/config.env
@@ -61,4 +61,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://156-ctc-data.ctcontents.com/down/518d860ab12e00d22c2beee5ca12e135/boot.img?cts=client-37660667&ctp=116A28A182A4&ctt=1746291757&limit=2&spd=2200000&ctk=518d860ab12e00d22c2beee5ca12e135&chk=9e30f2f159218a92eddd242cc412229e-134217728
+SOURCE_BOOT_IMAGE=https://drive.google.com/file/d/1w3iqeq9Cim3oep6JIQ_tuYioXGJtISyd/view?usp=sharing
