--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiangfeidexiaohuo/android_kernel_xiaomi_evergo
-KERNEL_SOURCE_BRANCH=evergo-r-oss
-KERNEL_CONFIG=k6833v1_64_defconfig
+KERNEL_SOURCE=https://github.com/HUNDUNJUN/kernel_xiaomi_evergo
+KERNEL_SOURCE_BRANCH=R
+KERNEL_CONFIG=evergo_defconfig
 KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
