--- a/config.env
+++ b/config.env
@@ -3,7 +3,7 @@ CONFIG_ENV=config.env
 KERNEL_SOURCE=https://github.com/HUNDUNJUN/kernel_xiaomi_evergo
 KERNEL_SOURCE_BRANCH=R
 KERNEL_CONFIG=evergo_defconfig
-KERNEL_IMAGE_NAME=Image.gz
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LD=ld.lld
